--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
   <color name="colorPrimaryDark">#3700B3</color>
   <color name="colorAccent">#03DAC5</color>
   <color name="hidden">#00FFFFFF</color>
+  <color name="colorButtonNumber">#595959</color>
+  <color name="colorTextNumber">#FFFFFF</color>
 </resources>
