--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,14 @@
     <item name="android:focusableInTouchMode">true</item>
     <item name="android:inputType">none</item>
   </style>
+
+  <style name="button_number">
+    <item name="android:backgroundTint">@android:color/holo_blue_dark</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_width">wrap_content</item>
+    <item name="android:textSize">@dimen/text_size_button_main</item>
+    <item name="android:textColor">@color/colorButtonNumber</item>
+    <item name="android:layout_margin">@dimen/layout_margin_button</item>
+  </style>
+
 </resources>
