--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,9 +10,7 @@
   <style name="InvisibleFocusHolder">
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
-    <item name="android:focusable">true</item>
-    <item name="android:focusableInTouchMode">true</item>
-    <item name="android:inputType">none</item>
+    <item name="android:inputType">number</item>
   </style>
 
   <style name="button_func">
