--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,12 @@
     <item name="colorAccent">@color/colorAccent</item>
 
   </style>
-  <style name="InvisibleFocusHolder">
-    <item name="android:layout_width">0dp</item>
-    <item name="android:layout_height">0dp</item>
-    <item name="android:inputType">number</item>
+  <style name="edit_text_main">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">match_parent</item>
+    <item name="android:textAlignment">textEnd</item>
+    <item name="android:inputType">numberSigned</item>
+    <item name="android:textSize">90sp</item>
   </style>
 
   <style name="button_func">
