--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -5,5 +5,6 @@
 
     <dimen name="text_size_button_func">18sp</dimen>
     <dimen name="text_size_button_main">25sp</dimen>
-
+    <dimen name="text_size_edit_text_main">85sp</dimen>
+    <dimen name="text_size_edit_text_main_equal">65sp</dimen>
 </resources>
